# AL-Codon-Counter-1.0

./: .gitignore  AL_CODON_APP.iss  AL_CODON_APP.spec  AL_CODON_test_2.py  README.md  Read_Docx_and_generate_Txt__Docx.py  View_Pentamer_Colored_Text.py  View_RED_or_Colored_Selected_Sequence.py  build_linux.sh  build_mac.sh  distribution.xml  interface_AL_Counter.py  license.txt  pyproject.toml  pyqt5_files.part3.rar  requirements-Visual-Studio.txt  requirements.txt  splash_screen.py  ui_splash_screen.py
.github/workflows/: Mac_main.yml  main.yml
