[tool.poetry]
name = "al_codon_counter_app"
version = "0.1.0"
description = "This project is designed to count codons in DNA sequences. It includes several features such as counting specific pentamers and generating output files in different formats."
authors = ["Houssem Khalfallah <houssembenkhalfallah@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beautifulsoup4 = "4.12.3"
cycler = "0.11.0"
kiwisolver = "1.3.1"
lxml = "5.2.1"
matplotlib = "3.3.4"
pandas = "1.3.3"
Pillow = "8.4.0"
pyparsing = "3.0.7"
PyQt5 = "5.15.4"
PyQt5-sip = "12.9.1"
python-dateutil = "2.9.0.post0"
python-docx = "0.8.11"
pytz = "2024.1"
six = "1.16.0"
soupsieve = "2.3.2.post1"
numpy = "1.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
